refactor(refactor-plan): modernize object contracts and docs (p4)
Touched files: GameObject hierarchy, GameController input/hitbox constants, GamePanel render constants, CLAUDE.md, refactor-plan draft/progress.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>